[tool.poetry]
name = "graphcast-generation"
version = "0.1.0"
description = ""
authors = ["Ameer Arsala <ameer.arsala03@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
graphcast = {url = "https://github.com/deepmind/graphcast/archive/master.zip"}
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
