[tool.poetry]
name = "ultimate-weather-forecast"
version = "0.1.0"
description = ""
authors = ["Ameer Arsala <ameer.arsala03@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
graphcast = { url = "https://github.com/deepmind/graphcast/archive/master.zip" }
jupyter = "^1.0.0"
google-cloud-storage = "^2.16.0"
herbie-data = "^2024.3.0"
cartopy = "^0.22.0"
eccodes = "^1.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
